infrastructure/networking/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: gateway-internal
spec:
  gatewayClassName: default
  listeners:
  - hostname: "*.vanillax.xyz"
    port: 80
    protocol: HTTP
    routes:
      kind: HTTPRoute
