infrastructure/networking/gateway/gw-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: "192.168.10.22"
  listeners:
    - protocol: HTTP  # Add HTTP listener for cloudflared
      port: 80
      name: http-gateway
      hostname: "*.vanillax.xyz"
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS  # Keep HTTPS listener for direct external access
      port: 443
      name: https-gateway
      hostname: "*.vanillax.xyz"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-vanillax
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: "vanillax.xyz"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-vanillax
      allowedRoutes:
        namespaces:
          from: All
